Try to fix scrollbar error

--- a/src/components/Games/Games.css
+++ b/src/components/Games/Games.css
@@ -1,5 +1,5 @@
 .games--main {
-  overflow: auto;
+  overflow: auto !important;
   height: 100vh;
 }
 
